--- a/10_绑定样式/绑定样式.html
+++ b/10_绑定样式/绑定样式.html
@@ -7,26 +7,83 @@
         <style>
             .basic{
                 height: 100px;
-                width: 500px;
-                border: solid 1px #000000;
+                width: 400px;
+                border: 1px solid black;
+            }
+            .happy {
+                border: 14px solid red;
+                background-color: rgba(255, 255, 0, 0.644);
+                background: linear-gradient(30deg, yellow, pink, orange, yellow);
+            }
+            .sad {
+                border: 4px dashed rgb(2, 197, 2);
+                background-color: gray;
+            }
+            .normal {
+                background-color: skyblue;
+            }
+            .atguigu1 {
+                background-color:yellowgreen;
+            }
+            .atguigu2 {
+                font-size: 30px;
+                text-shadow: 2px 2px 10px red;
+            }
+            .atguigu3 {
+                border-radius: 20px;
             }
         </style>
     </head>
     <body>
         <div id="root">
-            <p class="basic" :style="sty">test</p>
+            <!-- 绑定class样式--字符串写法，适用于：样式的类名不确定，需要动态指定 -->
+            <div class="basic" :class="mood" @click="changeMood">test</div> <br/><br/>
+
+            <!-- 绑定class样式--数组写法，适用于：要绑定的样式个数不确定、名字也不确定 -->
+            <div class="basic" :class="classArr">test</div> <br/><br/>
+
+            <!-- 绑定class样式--对象写法，适用于：要绑定的个数确定、名字也确定，但要动态决定用不用 -->
+            <div class="basic" :class="classObj">test</div> <br/><br/>
+
+            <!-- 绑定style样式--对象写法 -->
+            <div class="basic" :style="styleObj">test</div> <br/><br/>
+            <!-- 绑定style样式--数组样式 -->
+            <div class="basic" :style="styleArr">test</div>
         </div>
+
         <script>
             Vue.config.productionTip = false
             
             const vm = new Vue({
                 el:'#root',
                 data:{
-                    sty: {
-                        color:'red',
-                        fontSize:'30px',
-                        lineHeight:'100px',
-                        textAlign:'center'
+                    mood: 'normal',
+                    classArr: ['atguigu1', 'atguigu2', 'atguigu3'],
+                    classObj: {
+                        atguigu1: false,
+                        atguigu2: false
+                    },
+                    styleObj: {
+                        fontSize: '40px',
+                        color: 'red'
+                    },
+                    styleObj2: {
+                        backgroundColor: 'orange'
+                    },
+                    styleArr: [
+                        {
+                            fontSize: '60px',
+                            color: 'blue'
+                        },
+                        {
+                            backgroundColor: 'gray'
+                        }
+                    ]
+                },
+                methods: {
+                    changeMood() {
+                        const arr = ['happy', 'sad', 'normal']
+                        this.mood = arr[Math.floor(Math.random()*3)]
                     }
                 }
             })
