--- a/07_事件处理/2.事件修饰符.html
+++ b/07_事件处理/2.事件修饰符.html
@@ -1,99 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>时间修饰符</title>
-    <script src="../js/vue.js"></script>
-    <style>
-      * {
-        margin-top: 20px;
-      }
-      .demo1 {
-        height:50px;
-        background-color:skyblue;
-      }
-      .box1 {
-        padding: 5px;
-        background-color:skyblue;
-      }
-      .box2 {
-        padding: 5px;
-        background-color: orange;
-      }
-      .list {
-        height: 200px;
-        width: 200px;
-        background-color:coral;
-        overflow: auto;;
-      }
-      li {
-        height:100px
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root">
-      <h2>欢迎来到{{name}}学习</h2>
-      <!-- 阻止默认事件 -->
-      <a href="http://www.atguigu.com" @click.prevent="showInfo">点我提示信息</a>
 
-      <!-- 阻止冒泡 -->
-      <div class="demo1" @click="showInfo">
-        <button @click.stop="showInfo">点我提示信息</button>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <title>时间修饰符</title>
+  <script src="../js/vue.js"></script>
+  <style>
+    * {
+      margin-top: 20px;
+    }
 
-      <!-- 事件只触发一次 -->
-      <button @click.once="showInfo">点我提示信息</button>
+    .demo1 {
+      height: 50px;
+      background-color: skyblue;
+    }
 
-      <!-- 使用事件的捕获模式 -->
-      <div class="box1" @click.capture="showMsg(1)">
-        div1
-        <div class="box2" @click="showMsg(2)">
-          div2
-        </div>
-      </div>
+    .box1 {
+      padding: 5px;
+      background-color: skyblue;
+    }
 
-      <!-- 只有event.target是当前操作的元素时才触发事件 -->
-      <div class="demo1" @click.self="showInfo">
-        <button @click="showInfo">点我提示信息</button>
-      </div>
+    .box2 {
+      padding: 5px;
+      background-color: orange;
+    }
 
-      <!-- 事件的默认行为立即执行，无需等待时间毁掉执行完毕 -->
-      <!-- 滚动条滚动 -->
-      <!-- <ul @scroll="demo" class="list"> -->
-      <!-- 滚轮滚动 -->
-      <ul @wheel.passive="demo" class="list">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-      </ul>
+    .list {
+      height: 200px;
+      width: 200px;
+      background-color: coral;
+      overflow: auto;
+      ;
+    }
+
+    li {
+      height: 100px
+    }
+  </style>
+</head>
+
+<body>
+  <div id="root">
+    <h2>欢迎来到{{name}}学习</h2>
+    <!-- 阻止默认事件 -->
+    <a href="http://www.atguigu.com" @click.prevent="showInfo">点我提示信息</a>
+
+    <!-- 阻止冒泡 -->
+    <div class="demo1" @click="showInfo">
+      <button @click.stop="showInfo">点我提示信息</button>
     </div>
 
-    <script>
-      Vue.config.productionTip = false;
+    <!-- 事件只触发一次 -->
+    <button @click.once="showInfo">点我提示信息</button>
 
-      new Vue({
-        el: '#root',
-        data: {
-          name: '尚硅谷'
+    <!-- 使用事件的捕获模式 -->
+    <div class="box1" @click.capture="showMsg(1)">
+      div1
+      <div class="box2" @click="showMsg(2)">
+        div2
+      </div>
+    </div>
+
+    <!-- 只有event.target是当前操作的元素时才触发事件 -->
+    <div class="demo1" @click.self="showInfo">
+      <button @click="showInfo">点我提示信息</button>
+    </div>
+
+    <!-- 事件的默认行为立即执行，无需等待时间毁掉执行完毕 -->
+    <!-- 滚动条滚动 -->
+    <!-- <ul @scroll="demo" class="list"> -->
+    <!-- 滚轮滚动 -->
+    <ul @wheel.passive="demo" class="list">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
+  </div>
+
+  <script>
+    Vue.config.productionTip = false;
+
+    new Vue({
+      el: '#root',
+      data: {
+        name: '尚硅谷'
+      },
+      methods: {
+        showInfo(e) {
+          // e.preventDefault(); // 阻止默认事件
+          // e.stopPropagation(); // 阻止冒泡
+          alert('同学你好')
         },
-        methods: {
-          showInfo(e) {
-            // e.preventDefault(); // 阻止默认事件
-            // e.stopPropagation(); // 阻止冒泡
-            alert('同学你好')
-          },
-          showMsg(msg) {
-            console.log(msg)
-          },
-          demo() {
-            for (var i = 0; i <10000; i++) {
-              console.log('@')
-            }
+        showMsg(msg) {
+          console.log(msg)
+        },
+        demo() {
+          for (var i = 0; i < 10000; i++) {
+            console.log('@')
           }
         }
-      })
-    </script>
-  </body>
+      }
+    })
+  </script>
+</body>
+
 </html>
