--- a/15_内置指令/1.v-text指令.html
+++ b/15_内置指令/1.v-text指令.html
@@ -3,27 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>理解MVVM</title>
+  <title>v-text指令</title>
   <script src="../js/vue.js"></script>
 </head>
 
 <body>
   <div id="root">
-    <h1>学校名称：{{name}}</h1>
-    <h1>学校地址：{{address}}</h1>
+    <div>{{name}}</div>
+    <div v-text="name"></div>
   </div>
 
   <script>
     Vue.config.productionTip = false
 
-    const vm = new Vue({
+    new Vue({
       el: '#root',
       data: {
-        name: '尚硅谷',
-        address: '北京'
+        name: '尚硅谷'
       }
     })
-    console.log(vm)
   </script>
 </body>
 
