--- a/15_内置指令/5.v-pre指令.html
+++ b/15_内置指令/5.v-pre指令.html
@@ -3,27 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>理解MVVM</title>
+  <title>v-pre指令</title>
   <script src="../js/vue.js"></script>
 </head>
 
 <body>
   <div id="root">
-    <h1>学校名称：{{name}}</h1>
-    <h1>学校地址：{{address}}</h1>
+    <h2 v-pre>没有使用指令语法</h2>
+    <h2>当前的n值：{{n}}</h2>
+    <button @click="n++">点我n+1</button>
   </div>
 
   <script>
     Vue.config.productionTip = false
 
-    const vm = new Vue({
+    new Vue({
       el: '#root',
       data: {
-        name: '尚硅谷',
-        address: '北京'
+        n: 1
       }
     })
-    console.log(vm)
   </script>
 </body>
 
