--- a/16_自定义指令/自定义指令.html
+++ b/16_自定义指令/自定义指令.html
@@ -1,39 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>自定义指令</title>
-        <script src="../js/vue.js"></script>
-    </head>
-    <body>
-        <div id="root">
-            <h2>{{name}}</h2>
-            <h2>当前的n值是：<span v-text="n"></span></h2>
-            <h2>放大10倍后的n值是：<span v-big="n"></span></h2>
-            <button @click="n++">点我n+1</button>
-            <input type="text" v-fbind:value="n">
-            <input type="text" v-model="num">
-        </div>
 
-        <script>
-            Vue.config.productionTip = false
+<head>
+    <meta charset="UTF-8">
+    <title>自定义指令</title>
+    <script src="../js/vue.js"></script>
+</head>
 
-            new Vue({
-                el:'#root',
-                data:{
-                    name:'尚硅谷',
-                    n:1,
-                    num:''
+<body>
+    <div id="root">
+        <h2>{{name}}</h2>
+        <h2>当前的n值是：<span v-text="n"></span></h2>
+        <h2>放大10倍后的n值是：<span v-big="n"></span></h2>
+        <button @click="n++">点我n+1</button>
+        <hr />
+        <input type="text" v-fbind:value="n">
+        <hr />
+    </div>
+    <div id="root2">
+        <input type="text" v-fbind:value="num">
+    </div>
+
+    <script>
+        Vue.config.productionTip = false
+
+        // 全局自定义指令
+        Vue.directive('fbind', {
+            // 指令与元素成功绑定时（一上来）
+            bind(element, binding) {
+                console.log(this) // 此处的this是window
+                element.value = binding.value
+            },
+            // 指令所在元素被插入页面时
+            inserted(element, binding) {
+                element.focus()
+            },
+            // 指令所在的模板被重新解析时
+            update(element, binding) {
+                element.value = binding.value
+            }
+        })
+
+        new Vue({
+            el: '#root',
+            data: {
+                name: '尚硅谷',
+                n: 1
+            },
+            directives: {
+                // big函数何时会被调用：1.指令与元素成功绑定时  2.指令所在的模板被重新解析时
+                big(element, binding) {
+                    element.innerText = binding.value * 10
                 },
-                directives:{
-                    big(element,binding){
-                        element.innerText = binding.value * 10
-                    },
-                    fbind(element,binding){
-                        element.value = binding.value
-                    }
-                }
-            })
-        </script>
-    </body>
+                // fbind: {
+                //     // 指令与元素成功绑定时（一上来）
+                //     bind(element, binding) {
+                //         console.log(this) // 此处的this是window
+                //         element.value = binding.value
+                //     },
+                //     // 指令所在元素被插入页面时
+                //     inserted(element, binding) {
+                //         element.focus()
+                //     },
+                //     // 指令所在的模板被重新解析时
+                //     update(element, binding) {
+                //         element.value = binding.value
+                //     }
+                // }
+            }
+        })
+
+        new Vue({
+            el: '#root2',
+            data: {
+                num: 10
+            }
+        })
+    </script>
+</body>
+
 </html>
