--- a/19_单文件组件/index.html
+++ b/19_单文件组件/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>练习一下单文件组件的语法</title>
-    </head>
-    <body>
-        <div id="root">
 
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <title>练习一下单文件组件的语法</title>
+</head>
 
-        <script src="../js/vue.js"></script>
-        <script src="main.js"></script>
-    </body>
+<body>
+    <div id="root">
+
+    </div>
+
+    <script src="../js/vue.js"></script>
+    <script src="./main.js"></script>
+</body>
+
 </html>
